<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_index"
            android:icon="@drawable/ic_index_black_24dp"
            android:title="@string/title_index"/>

    <item
            android:id="@+id/navigation_city"
            android:icon="@drawable/ic_city_black_24dp"
            android:title="@string/title_city"/>

    <item
            android:id="@+id/navigation_alert"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_alert"/>

    <item
            android:id="@+id/navigation_mine"
            android:icon="@drawable/ic_mine_black_24dp"
            android:title="@string/title_mine"/>

</menu>
