<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.litroenade.yunjiweather.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_city"
            android:name="com.litroenade.yunjiweather.ui.city.CityFragment"
            android:label="@string/title_city"
            tools:layout="@layout/fragment_city"/>

    <fragment
            android:id="@+id/navigation_index"
            android:name="com.litroenade.yunjiweather.ui.index.LifeIndexFragment"
            android:label="@string/title_index"
            tools:layout="@layout/fragment_life_index"/>

    <fragment
            android:id="@+id/navigation_alert"
            android:name="com.litroenade.yunjiweather.ui.alert.AlertFragment"
            android:label="@string/title_alert"
            tools:layout="@layout/fragment_alert"/>

    <fragment
            android:id="@+id/navigation_mine"
            android:name="com.litroenade.yunjiweather.ui.mine.MineFragment"
            android:label="@string/title_mine"
            tools:layout="@layout/fragment_mine"/>
</navigation>
