<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/bg_splash_weather"
             tools:context=".ui.splash.SplashActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

        <ImageView
                android:id="@+id/splash_logo_image"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:background="@drawable/bg_splash_logo"
                android:contentDescription="@string/app_name"
                android:padding="24dp"
                android:src="@drawable/ic_weather_sunny"/>

        <TextView
                android:id="@+id/splash_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/splash_title"
                android:textColor="@color/weather_text_inverse"
                android:textSize="34sp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/splash_subtitle_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/splash_subtitle"
                android:textColor="#EAFBFF"
                android:textSize="15sp"/>
    </LinearLayout>
</FrameLayout>
